Changes: - Fix spacing between GITHUB link and contribute link

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -80,7 +80,7 @@ body {
 }
 
 .navbar-link > button {
-  margin-left: 1em;
+  margin-left: 4em;
 }
 
 .dev-language-badge {
